--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -208,3 +208,31 @@
     height: auto;
   }
 }
+@media only screen and (max-width: 768px) {
+  .work-section {
+    height: auto;
+  }
+  .work-section h2 {
+    font-size: 40px;
+    margin-top: 60px;
+    margin-bottom: 10px;
+  }
+  .work-flex {
+    flex-direction: column;
+    margin-left: 0;
+    padding-right: 0;
+  }
+  .work-box {
+    width: 100%;
+    padding: 30px 20px;
+    border-right: none;
+    border-bottom: 1px solid #363636;
+    flex-shrink: 1;
+  }
+  .work-flex .work-box:nth-child(even) {
+    flex-direction: column;
+  }
+  .work-image img {
+    max-height: 220px;
+  }
+}
